[tool.poetry]
name = "my-actions"
version = "0.1.0"
description = ""
authors = ["滑稽 <2282373181@qq.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
autoflake = "^2.3.1"
mypy = "^1.11.2"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
commitizen = "^3.29.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lint = "scripts.lint:main"
format = "scripts.format:main"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
default = true
